[tool.poetry]
name = "nmap-wrapper"
version = "0.1.0"
description = ""
authors = ["Noah May <noahmouse2011@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nmap_wrapper"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
