[tool.poetry]
name = "nmap-wrapper"
version = "0.1.0"
description = ""
authors = ["Noah May <noahmouse2011@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nmap_wrapper"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
